--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://yuriybilskiy.github.io/LunaEdgePokemon/",
-
   "scripts": {
-  "dev": "vite",
-  "build": "tsc -b && vite build",
-  "lint": "eslint .",
-  "preview": "vite preview",
-  "storybook": "storybook dev -p 6006",
-  "build-storybook": "storybook build",
-  "predeploy": "yarn build",
-  "deploy": "gh-pages -d dist"
-},
+    "dev": "vite",
+    "build": "tsc -b && vite build && build-storybook -s public",
+    "lint": "eslint .",
+    "preview": "vite preview",
+     "storybook": "start-storybook -p 6006 -s public",
+  "build-storybook": "build-storybook -s public",
+  "serve-storybook": "serve storybook-static",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d dist"
+  },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
@@ -37,7 +37,7 @@
     "@storybook/experimental-addon-test": "8.6.4",
     "@storybook/node-logger": "^8.6.4",
     "@storybook/react": "^8.6.4",
-    "@storybook/react-vite": "8.6.4",
+    "@storybook/react-vite": "^8.6.4",
     "@storybook/test": "8.6.4",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
