--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "homepage": "https://yuriybilskiy.github.io/LunaEdgePokemon/",
   "scripts": {
   "dev": "vite",
-  "build": "tsc -b && vite build",
+  "build": "tsc && vite build",
+    "build-all": "yarn build && yarn build-storybook",
+    "build-storybook": "storybook build --output-dir build/storybook",
+    "build-storybook:test": "storybook build --output-dir build/storybook --test",
   "lint": "eslint .",
   "preview": "vite preview",
   "storybook": "storybook dev -p 6006",
-  "build-storybook": "storybook build",
   "predeploy": "yarn build",
   "deploy": "gh-pages -d dist"
 },
